# Hands_on_Perception

./: .gitignore  Readme.md
Report_Lab_1/lab_1/: CMakeLists.txt
Report_Lab_1/lab_1/src/: camera_calibration.cpp  detecting_aruco.cpp  distance_estimation.cpp  draw_cube.cpp  pose_estimation.cpp  relative_pose_estimation.cpp
example/src/: main.cpp
lab_1/: CMakeLists.txt
lab_1/src/: camera_calibration.cpp  detecting_aruco.cpp  distance_estimation.cpp  draw_cube.cpp  generate_board.cpp  generate_marker.cpp  pose_estimation.cpp  relative_pose_estimation.cpp
lab_2/: Dockerfile  build_image.sh  run_it.sh
